--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <body>
 
 <header>
-  <img src="banner.png" alt="Encabezado" />
+  <img src="logo.png" alt="Encabezado" />
   <h1></h1>
 </header>
 
