--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <div class="container">
   <div class="proyecto">
     <h2>Resumen de Obras de Carpintería</h2>
-    <p>Obras a realizar:</p>
+    <p>Obras a Realizar</p>
   </div>
 
 <div class="container">
